Carried on with the topology-driver and added the configuration sample file.